
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef unsigned long ulong ;
struct hostent {scalar_t__ h_addr; } ;


 unsigned long INADDR_NONE ;
 int exit (int ) ;
 struct hostent* gethostbyname (char*) ;
 unsigned long inet_addr (char*) ;
 int printf (char*,char*) ;

ulong resolv_host(char *host)
{

ulong uhost=0;
struct hostent *th;

uhost=inet_addr(host);
if(uhost==INADDR_NONE)
{
 th=gethostbyname(host);
 if(!th)
 {
   printf("Check if %s is up \n",host);
   exit(0);
 }

 uhost=*(unsigned long*)th->h_addr;

}



return uhost;


}
